# bili

./: .gitignore  Cargo.toml  README.md  test_examples.sh
examples/: login.rs  record_action.rs  record_audio.rs  record_comment.rs  record_danmaku.rs  record_fav.rs  record_history.rs  record_login.rs  record_search.rs  record_user.rs  record_video.rs
src/: action.rs  audio.rs  client.rs  coin.rs  comment.rs  credentials.rs  danmaku.rs  error.rs  fav.rs  history.rs  lib.rs  like.rs  login.rs  search.rs  subtitle.rs  summary.rs  triple.rs  user.rs  video.rs  wbi.rs
